--- a/src/styles/loading.module.css
+++ b/src/styles/loading.module.css
@@ -1,26 +1,135 @@
-.loadingContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 75vh;
+
+@keyframes lds_roller {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
-.loader {
-    border: 8px solid #ccc;
-    border-top: 8px solid #35b669;
+.lds_roller {
+    position: relative;
+    display: inline-block;
+    height: 64px;
+    width: 64px;
+}
+
+.lds_roller div {
+    animation: lds_roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    transform-origin: 32px 32px;
+}
+
+.lds_roller div:after {
+    position: absolute;
+    display: block;
+    background: #00539f;
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    animation: spin 1s linear infinite;
-    margin-bottom: 16px; /* Jarak antara loader dan teks */
+    content: " ";
+    margin: -3px 0 0 -3px;
+    height: 6px;
+    width: 6px;
 }
 
-.loadingText {
-    font-size: 1.5rem;
+.lds_roller div:nth-child(1) {
+    animation-delay: -0.036s;
+}
+
+.lds_roller div:nth-child(1):after {
+    top: 50px;
+    left: 50px;
+}
+
+.lds_roller div:nth-child(2) {
+    animation-delay: -0.072s;
+}
+
+.lds_roller div:nth-child(2):after {
+    top: 54px;
+    left: 45px;
+}
+
+.lds_roller div:nth-child(3) {
+    animation-delay: -0.108s;
+}
+
+.lds_roller div:nth-child(3):after {
+    top: 57px;
+    left: 39px;
+}
+
+.lds_roller div:nth-child(4) {
+    animation-delay: -0.144s;
+}
+
+.lds_roller div:nth-child(4):after {
+    top: 58px;
+    left: 32px;
+}
+
+.lds_roller div:nth-child(5) {
+    animation-delay: -0.18s;
+}
+
+.lds_roller div:nth-child(5):after {
+    top: 57px;
+    left: 25px;
+}
+
+.lds_roller div:nth-child(6) {
+    animation-delay: -0.216s;
+}
+
+.lds_roller div:nth-child(6):after {
+    top: 54px;
+    left: 19px;
+}
+
+.lds_roller div:nth-child(7) {
+    animation-delay: -0.252s;
+}
+
+.lds_roller div:nth-child(7):after {
+    top: 50px;
+    left: 14px;
+}
+
+.lds_roller div:nth-child(8) {
+    animation-delay: -0.288s;
+}
+
+.lds_roller div:nth-child(8):after {
+    top: 45px;
+    left: 10px;
+}
+
+.loading-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
+    border-top: 4px solid #4285f4;
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
